--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -758,13 +758,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#si-exercise"
+    "#si-exercise\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "\n",
+    "\n",
+    "\n",
+    "class RegressionModel:\n",
+    "\n",
+    "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.create_intercept = create_intercept\n",
+    "        self.regression_type = regression_type\n",
+    "        self.results = {}\n",
+    "\n",
+    "        if self.create_intercept == True:\n",
+    "           self.x[\"intercept\"] = 1\n",
+    "\n",
+    "    def ols_regression(self):\n",
+    "        X = self.x.values\n",
+    "        y = self.y.values.reshape(-1, 1)\n",
+    "\n",
+    "        beta = np.linalg.inv(X.T @ X) @ X.T @ y\n",
+    "\n",
+    "        y_hat = X @ beta\n",
+    "        residuals = y - y_hat\n",
+    "\n",
+    "        n = X.shape[0]\n",
+    "        k = X.shape[1]\n",
+    "\n",
+    "       \n",
+    "        s2 = (residuals.T @ residuals) / (n - k)\n",
+    "\n",
+    "        var_beta = s2[0, 0] * np.linalg.inv(X.T @ X)\n",
+    "        se = np.sqrt(np.diag(var_beta))\n",
+    "\n",
+    "        \n",
+    "        t_stats = beta.flatten() / se\n",
+    "        p_values = []\n",
+    "        for t in t_stats:\n",
+    "            p = 2 * (1 - stats.t.cdf(abs(t), df=n - k))\n",
+    "            p_values.append(p)\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        for i in range(len(self.x.columns)):\n",
+    "            column_name = self.x.columns[i]\n",
+    "            coefficient_value = beta[i, 0]\n",
+    "            standard_error_value = se[i]\n",
+    "            t_value = t_stats[i]\n",
+    "            p_value = p_values[i]\n",
+    "\n",
+    "            self.results[column_name] = {\n",
+    "                \"coefficient\": coefficient_value,\n",
+    "                \"standard_error\": standard_error_value,\n",
+    "                \"t_stat\": t_value,\n",
+    "                \"p_value\": p_value\n",
+    "            }\n",
+    "\n",
+    "    def summary(self):\n",
+    "        if not self.results:\n",
+    "            raise ValueError(\"You must run ols_regression() before calling summary().\")\n",
+    "\n",
+    "        summary_df = pd.DataFrame.from_dict(self.results, orient=\"index\").reset_index()\n",
+    "        summary_df.columns = [\"Variable name\", \"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]\n",
+    "    \n",
+    "        return summary_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef6457e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -778,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
